--- a/QuanLyKTX/QuanLyKTX.csproj
+++ b/QuanLyKTX/QuanLyKTX.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{92B2569B-35EF-4D12-B5AD-33BB67ED5D49}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>QuanLyKTX</RootNamespace>
-    <AssemblyName>QuanLyKTX.Ver2</AssemblyName>
+    <AssemblyName>QuanLyKTX.Ver9</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -93,12 +93,6 @@
     <Compile Include="Form\frm_DangNhap.Designer.cs">
       <DependentUpon>frm_DangNhap.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\Form_ThongTinSinhVien.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form\Form_ThongTinSinhVien.Designer.cs">
-      <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form\frm_TrangChu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,9 +176,6 @@
     <EmbeddedResource Include="Form\frm_DangNhap.resx">
       <DependentUpon>frm_DangNhap.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Form_ThongTinSinhVien.resx">
-      <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form\frm_DoiMatKhau.resx">
       <DependentUpon>frm_DoiMatKhau.cs</DependentUpon>
     </EmbeddedResource>
@@ -243,6 +234,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Query data\Nhóm07_Quản_Lý_Ký_Túc_Xá.sql" />
+    <None Include="Resources\Search-icon2.png" />
+    <None Include="Resources\Filter-icon1.png" />
+    <None Include="Resources\Filter-icon.png" />
     <None Include="Resources\icons8-account-321.png" />
     <None Include="Resources\icons8-account-32.png" />
     <None Include="Resources\search-icon.png" />
