--- a/QuanLyKTX/Properties/Settings.settings
+++ b/QuanLyKTX/Properties/Settings.settings
@@ -5,16 +5,16 @@
     <Setting Name="cnnStr_admin" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=LAPTOP-MB5F72F2\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Admin;Password=123456789&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=THANHBINH\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Admin;Password=123456789&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=LAPTOP-MB5F72F2\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Admin;Password=123456789</Value>
+      <Value Profile="(Default)">Data Source=THANHBINH\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Admin;Password=123456789</Value>
     </Setting>
     <Setting Name="cnnStr_manage" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=LAPTOP-MB5F72F2\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Manage;Password=0123456789&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=THANHBINH\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Manage;Password=0123456789&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=LAPTOP-MB5F72F2\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Manage;Password=0123456789</Value>
+      <Value Profile="(Default)">Data Source=THANHBINH\SQLEXPRESS;Initial Catalog=QuanLyKTX;User ID=Manage;Password=0123456789</Value>
     </Setting>
   </Settings>
 </SettingsFile>
